# AetherMind-AI

./: .env.example  .gitattributes  Cargo.toml  README.md  RELEASE_NOTES.md  package.json
contracts/: NeuralPathwayToken.sol
contracts/abi/: NeuralPathwayToken.json
programs/neural_pathway/: Cargo.toml
programs/neural_pathway/src/: error.rs  lib.rs  state.rs
programs/token/: Cargo.toml
programs/token/src/: lib.rs  state.rs
scripts/: deployContract.js  seed.js
src/: index.js
src/api/routes/: agentRoutes.js  crossChainRoutes.js  pathwayRoutes.js  tokenRoutes.js
src/core/: chainAdapter.js  cognitiveMesh.js
src/models/: agent.js  neuralPathway.js
src/models/schemas/: agentSchema.js  neuralPathwaySchema.js
src/services/: tokenService.js
src/utils/: blockchain.js  database.js  errors.js  logger.js  middleware.js  validation.js
